k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  selector:
    app: app
  ports:
  - name: public
    port: 4180
    targetPort: 4180
  type: ClusterIP
